# ag2-docs-zh-cn

./: README.md  pyproject.toml  robots.txt  sitemap.xml
docs/src/: conf.py  index.md
docs/src/design/: 01 - Programming Model.md  02 - Topics.md  03 - Agent Worker Protocol.md  04 - Agent and Topic ID Specs.md  05 - Services.md  index.md
docs/src/reference/: index.md
docs/src/user-guide/: index.md
docs/src/user-guide/agentchat-user-guide/: index.md  installation.md  quickstart.ipynb  warning.md
docs/src/user-guide/agentchat-user-guide/examples/: arxiv_search_results.json  company-research.ipynb  index.md  literature-review.ipynb  travel-planning.ipynb
docs/src/user-guide/agentchat-user-guide/tutorial/: agents.ipynb  custom-agents.ipynb  index.md  models.ipynb  selector-group-chat.ipynb  teams.ipynb  termination.ipynb
docs/src/user-guide/core-user-guide/: faqs.md  index.md  quickstart.ipynb
docs/src/user-guide/core-user-guide/cookbook/: index.md
docs/src/user-guide/core-user-guide/core-concepts/: agent-and-multi-agent-application.md  agent-identity-and-lifecycle.md  api-layers.md  application-stack.md  architecture.md  index.md  topic-and-subscription.md
docs/src/user-guide/core-user-guide/design-patterns/: group-chat.ipynb  handoffs.ipynb  index.md  mixture-of-agents.ipynb  multi-agent-debate.ipynb  reflection.ipynb
docs/src/user-guide/core-user-guide/extensions-user-guide/: index.md
docs/src/user-guide/core-user-guide/framework/: agent-and-agent-runtime.ipynb  command-line-code-executors.ipynb  distributed-agent-runtime.ipynb  index.md  logging.md  message-and-communication.ipynb  model-clients.ipynb  tools.ipynb
